<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.malik</groupId>
    <artifactId>platform-core</artifactId>
    <version>0.0.1</version>
    <name>platform-core</name>
    <description>Application for common functionalities</description>
    <packaging>jar</packaging>

    <properties>
        <java.version>21</java.version>
        <springdoc-openapi-ui-version>2.5.0</springdoc-openapi-ui-version>
        <maven.openapi-generator.plugin>7.12.0</maven.openapi-generator.plugin>
        <jakarta.validation>3.1.0</jakarta.validation>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>3.4.3</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
            <version>3.3.3</version>
        </dependency>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <version>${jakarta.validation}</version> <!-- Ensure this is compatible with your Spring Boot version -->
        </dependency>
        <dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>0.2.4</version>
        </dependency>

        <!--	Spring boot api docs	-->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc-openapi-ui-version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.yaml</groupId>
                    <artifactId>snakeyaml</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>jakarta.xml.bind</groupId>
                    <artifactId>jakarta.xml.bind-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>jakarta.validation</groupId>
                    <artifactId>jakarta.validation-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-annotations</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-autoconfigure</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-aop</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-web</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-beans</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-context</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-expression</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!--    per application  Swiggy   -->
            <plugin>
                <groupId>org.openapitools</groupId>
                <artifactId>openapi-generator-maven-plugin</artifactId>
                <version>${maven.openapi-generator.plugin}</version>
                <executions>
                    <execution>
                        <configuration>
                            <addCompileSourceRoot>true</addCompileSourceRoot>
                            <inputSpec>${project.basedir}/src/main/resources/swiggy/Swiggy.yml</inputSpec>
                            <generatorName>spring</generatorName>
                            <generateModelDocumentation>true</generateModelDocumentation>
                            <generateModelTests>false</generateModelTests>
                            <generateApiDocumentation>true</generateApiDocumentation>
                            <generateApiTests>false</generateApiTests>
                            <output>${project.build.directory}/generated-sources/openapi</output>
                            <apiPackage>${project.groupId}.swiggy.api</apiPackage>    <!-- add application specific names  -->
                            <modelPackage>${project.groupId}.swiggy.model</modelPackage>  <!-- add application specific names -->
                            <packageName>${project.groupId}.package</packageName>
                            <configOptions>
                                <interfaceOnly>true</interfaceOnly>  <!-- Generate only interfaces -->
                                <openApiNullable>false</openApiNullable>
                                <useTags>true</useTags>
                                <useSpringBoot3>true</useSpringBoot3>
                                <dateLibrary>java8</dateLibrary>
                            </configOptions>
                        </configuration>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <id>swiggy</id> <!-- application specific name -->
                    </execution>
                </executions>

            </plugin>

            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        --enable-preview
                    </compilerArgs>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
